--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_database: ^9.0.4
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
   pinput: ^1.2.2
   flutter:
     sdk: flutter
