--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.15.0-116.0.dev <3.0.0"
+#  sdk: ">=2.12.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,6 +32,11 @@ dependencies:
   firebase_core: ^1.10.6
   firebase_auth: ^3.3.4
   flutter_secure_storage: ^5.0.2
+  google_maps_flutter: ^2.1.1
+  geolocator: ^8.0.5
+#  outline_material_icons: ^0.1.1
+
+
   pinput: ^1.2.2
   flutter:
     sdk: flutter
