--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   google_maps_flutter: ^2.1.1
   geolocator: ^8.0.5
+  location: ^4.3.0
+
 #  outline_material_icons: ^0.1.1
 
 
