--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   google_maps_flutter: ^2.1.1
   geolocator: ^8.0.5
   location: ^4.3.0
+  fluttertoast: ^8.0.8
+  after_layout: ^1.1.0
 
 #  outline_material_icons: ^0.1.1
 
